<?xml version="1.0"?>
<package format="3">
  <name>libi_fleet</name>
  <version>0.0.1</version>
  <description>Libi FMS brain — task manager + pluggable dispatch/traffic (pluginlib) + fleet adapter</description>
  <maintainer email="dlrkdxor0821@gmail.com">leekt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>libi_fleet_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
